test/sema/inference/type_inference_condition.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

fn main(): unit { 
  let s;

  // CHECK: [[# @LINE + 1 ]]:6: error: 's' is not initialized
  if s {}

  s = true;
}

// CHECK-NOT: {{.*error.*}}
